<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.difi.meldingsutveksling</groupId>
    <artifactId>parent-pom</artifactId>
    <packaging>pom</packaging>
    <version>1.7.54</version>
    <name>Multiproject for meldingsutveksling</name>

    <scm>
        <connection>scm:git:https://github.com/difi/move-integrasjonspunkt</connection>
        <developerConnection>scm:git:https://github.com/difi/move-integrasjonspunkt</developerConnection>
        <url>https://github.com/difi/move-integrasjonspunkt</url>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>DIFI MOVE</id>
            <name>DIFI MOVE Nexus 3rd party</name>
            <url>https://beta-meldingsutveksling.difi.no/content/repositories/thirdparty/</url>
        </repository>
        <repository>
            <id>DIFI Move releases</id>
            <name>DIFI MOVE releases on Nexus</name>
            <url>https://beta-meldingsutveksling.difi.no/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>Jsch</id>
            <url>http://jsch.sf.net/maven2/</url>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
        <commons.lang.version>2.3</commons.lang.version>
        <apache.commons.version>10.0-b28</apache.commons.version>
        <jacoco.version>0.7.5.201505241946</jacoco.version>
        <!-- bug with logstash-logback-encoder in 1.1.7, wait for 1.1.8 http://jira.qos.ch/browse/LOGBACK-1158 -->
        <logback.version>1.1.6</logback.version>
        <mockito.version>1.10.19</mockito.version>
        <move-common.version>1.0.10</move-common.version>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>

    <modules>
        <module>common</module>
        <module>security</module>
        <module>noarkexchange</module>
        <module>noarkexchange-p360</module>
        <module>noarkexchange-ephorte</module>
        <module>noarkexchange-websak</module>
        <module>mxa</module>
        <module>altinnexchange</module>
        <module>dokumentpakking</module>
        <module>integrasjonspunkt</module>
        <module>domain</module>
        <module>transport</module>
        <module>kvittering</module>
        <module>transport-file</module>
        <module>transport-altinn</module>
        <module>altinn-client</module>
        <module>test-tools</module>
        <module>post-til-virksomhet</module>
        <module>post-til-private</module>
        <module>service-registry-client</module>
        <module>nextbest</module>
        <module>ks-svarut</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.difi.move-common</groupId>
                <artifactId>audit</artifactId>
                <version>${move-common.version}</version>
            </dependency>
            <dependency>
                <groupId>no.difi.move-common</groupId>
                <artifactId>webservice-tools</artifactId>
                <version>${move-common.version}</version>
            </dependency>
            <dependency>
                <groupId>no.difi.move-common</groupId>
                <artifactId>move-dependencies</artifactId>
                <version>${move-common.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>

            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <junitArtifactName>junit:junit</junitArtifactName>
                        <argLine>${argLine} -Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
                            -Dfile.encoding=UTF-8
                        </argLine>
                        <excludes>
                            <exclude>**/*IntegrationTest.java</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>integration-test</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <phase>integration-test</phase>
                            <configuration>
                                <excludes>
                                    <exclude>none</exclude>
                                </excludes>
                                <includes>
                                    <include>**/*IntegrationTest.java</include>
                                </includes>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>3.0.2</version>

                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jvnet.jax-ws-commons</groupId>
                    <artifactId>jaxws-maven-plugin</artifactId>
                    <version>2.3</version>

                    <dependencies>
                        <dependency>
                            <groupId>com.sun.xml.ws</groupId>
                            <artifactId>jaxws-tools</artifactId>
                            <version>2.2.8</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <destFile>${project.basedir}/../jacoco.exec</destFile>
                    <dataFile>${project.basedir}/../jacoco.exec</dataFile>
                    <append>true</append>
                    <rules>
                        <!-- Do not enforce covered ratio.. (yet!) -->
                        <!--
                            <rule implementation="org.jacoco.maven.RuleConfiguration">
                                <element>BUNDLE</element>
                                <limits>
                                    <limit implementation="org.jacoco.report.check.Limit">
                                        <counter>COMPLEXITY</counter>
                                        <value>COVEREDRATIO</value>
                                        <minimum>0.60</minimum>
                                    </limit>
                                </limits>
                            </rule>
                        -->
                    </rules>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <releaseProfiles>release</releaseProfiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>1.9.5</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>1.0-m5</version>
                <configuration>
                    <flowInitContext>
                        <masterBranchName>master</masterBranchName>
                        <developBranchName>development</developBranchName>
                        <featureBranchPrefix>feature-</featureBranchPrefix>
                        <releaseBranchPrefix>release-</releaseBranchPrefix>
                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                        <versionTagPrefix>v@</versionTagPrefix>
                    </flowInitContext>
                    <allowSnapshots>true</allowSnapshots>
                    <scmCommentPrefix>[RELEASE] </scmCommentPrefix>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>1.4.3</version>
                <configuration>
                    <format>XML</format>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <sonar.host.url>
                    http://sonar-app01.difi.local:9000/
                </sonar.host.url>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>
</project>
